# advent-of-code-2025

./: README.md  create_day.sh  pyproject.toml
aoc/: base_solution.py
day01/: solution.py
day02/: solution.py
day03/: solution.py
day04/: solution.py
day05/: solution.py
day06/: solution.py
day07/: solution.py
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: solution.py
day12/: solution.py
