[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2025"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
matplotlib = "^3.10.7"
numpy = "^2.3.5"
shapely = "^2.1.2"
scipy = "^1.16.3"
ruff = "^0.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.8"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
